# leaked-check

./: Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  dependency-review.yml  supply-chain.yml
leakedcheck/: main.py
leakedcheck/collectors/: debian.py  fallback.py  github.py  ibb.py  librariesio.py  npm.py  nuget.py  overrides.py  packagecontent.py  pypi.py  securityinsights.py  tidelift.py
leakedcheck/overrides/github/: aspnet.json  dotnet.json  microsoft.json
leakedcheck/util/: context.py  normalize.py  searchers.py
overrides/github/: abpframework.json  ansible.json  apache.json  azure.json  crate.json  google.json  xamarin.json
overrides/github/gem/: rails.json
tests/leakedcheck/: test_end_to_end.py  test_sanitize_github_url.py
tests/leakedcheck/data/end_to_end/: cargo_pcre.test  cran_foreach.test  npm_left-pad.test  npm_path-browserify.test  npm_postcss-value-parser.test  pypi_requests.test
